# my-kindle-app-linux

./: Plan.md  README.md  build-output.txt  build-output2.txt  build-output3.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Readme.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: annotations.rs  books.rs  mod.rs  reading.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/plugins/: mod.rs
src/lib/components/: AnnotationPanel.svelte  BookCard.svelte  DictionaryPopup.svelte  Library.svelte  Reader.svelte  Settings.svelte  TOCSidebar.svelte  Toolbar.svelte
src/lib/services/: reader-bridge.ts  tauri-ipc.ts
src/lib/stores/: annotations.ts  library.ts  reader.ts  settings.ts
src/lib/types/: index.ts
static/: reader.html
