[package]
name = "kindled"
version = "0.1.0"
description = "A native Linux ebook reader for Kindle formats"
authors = ["Kindled Contributors"]
edition = "2021"

[lib]
name = "kindled_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kindled"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
